# news-radar

./: .env.example  .gitignore  README.md  architecture.md  config.yaml  pyproject.toml
.claude/: settings.local.json
src/radar/: __init__.py  balancer.py  cli.py  clustering.py  config.py  db.py  extraction.py  models.py  output.py  pipeline.py  scoring.py
src/radar/collectors/: __init__.py  arxiv.py  base.py  github.py  hackernews.py  reddit.py  rss.py
src/radar/web/: __init__.py  app.py
src/radar/web/static/: style.css
src/radar/web/templates/: base.html  briefing.html  index.html
tests/: test_core.py
